Addresses most comments in PR so far.